불필요 챕터 삭제 및 병합